<resources>
    <!--Buttons -->
    <string name="app_name">My Application</string>
    <string name="signIn">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="registerBtn">Register</string>
    <string name="cancelBtn">Cancel</string>
    <string name="editBtn">Edit</string>
    <string name="saveBtn">Save</string>
    <string name="logout">Logout</string>
    <string name="shop">Shop</string>
    <string name="pay">Pay</string>
    <string name="addToCart">Add to Cart</string>
    <string name="goToCart">Go to Cart</string>
    <string name="checkout">Checkout</string>

    <!--Edittexts -->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password"> Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="address"> Address</string>


    <!-- Textviews-->
    <string name="gender">Gender</string>
    <string name="notRegistered">Not a member yet?</string>
    <string name="productName">Product Name</string>
    <string name="productPrice">Product Price</string>
    <string name="discountPrice">Discount Price</string>
    <string name="total">Amount:</string>
    <string name="amountValue">$0.00</string>
</resources>
